--- a/simple-loan-calculator.html
+++ b/simple-loan-calculator.html
@@ -210,7 +210,7 @@
             <!-- NAVIGATION LINKS -->
             <div class="hidden md:flex items-center space-x-6">
                 <a href="search.html" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-                <a href="#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+                <a href="index.html#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
             </div>
             
             <!-- MOBILE TOGGLE -->
@@ -238,7 +238,7 @@
             </div>
             <div class="space-y-2">
                 <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-                <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+                <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
             </div>
         </div>
     </nav>
@@ -251,7 +251,7 @@
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-                    <a href="personal-loans.html" class="hover:text-blue-600">Personal Loans</a> &raquo;
+                    <a href="https://calcdomain.com/subcategories/loans-debt.html" class="hover:text-blue-600">Loans and Debts</a> &raquo;
                     <span>Simple Loan Calculator</span>
                 </nav>
 
