--- a/dti-ratio.html
+++ b/dti-ratio.html
@@ -25,7 +25,7 @@
   {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
     {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
     {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
-    {"@type":"ListItem","position":3,"name":"Loans & Debt","item":"https://calcdomain.com/loans-debt.html"},
+    {"@type":"ListItem","position":3,"name":"Loans & Debt","item":"https://calcdomain.com/subcategories/loans-debt.html"},
     {"@type":"ListItem","position":4,"name":"Debt-to-Income (DTI) Ratio Calculator","item":"https://calcdomain.com/dti-ratio.html"}
   ]}
   </script>
