--- a/mortgage-refinance.html
+++ b/mortgage-refinance.html
@@ -28,7 +28,6 @@
     a{ color:var(--primary); text-decoration:none } a:hover{ text-decoration:underline }
     .container{ width:var(--container); margin-inline:auto; padding-inline:clamp(1rem,4vw,2rem) }
 
-    /* Header */
     header.site-header{ background:var(--surface); border-bottom:1px solid var(--border) }
     .header-inner{ display:grid; grid-template-columns:auto 1fr; gap:.75rem; align-items:center; padding:.75rem 0 }
     .brand{ font-weight:800; color:var(--primary) }
@@ -37,21 +36,17 @@
     nav.main a{ color:var(--secondary); padding:.4rem .6rem; border-radius:6px }
     nav.main a:hover{ background:rgba(0,90,156,.08); text-decoration:none }
 
-    /* Skip link */
     .skip-link{ position:absolute; left:8px; top:-40px; background:var(--primary); color:#fff; padding:.5rem .75rem; border-radius:6px; z-index:1000 }
     .skip-link:focus{ top:8px }
 
-    /* Breadcrumb */
     nav.breadcrumb{ font-size:.95rem; color:var(--muted); margin:.5rem 0 1rem }
     nav.breadcrumb a{ color:inherit }
 
-    /* Layout */
     main{ padding-block:clamp(1rem,3vw,2rem) }
     .layout{ display:grid; grid-template-columns:1fr; gap:1.25rem }
     @media (min-width:992px){ .layout{ grid-template-columns:420px 1fr; gap:2rem; align-items:flex-start } }
     .card{ background:var(--surface); border:1px solid var(--border); border-radius:var(--radius); box-shadow:var(--shadow); padding:clamp(1rem,2.2vw,1.5rem) }
 
-    /* Inputs */
     .form-group{ margin-bottom:1rem }
     label{ font-weight:600; display:block; margin-bottom:.35rem }
     .input-wrap{ position:relative }
@@ -63,32 +58,29 @@
     .btn-primary{ background:var(--primary); color:#fff; border-color:var(--primary) }
     .btn-secondary{ background:transparent; color:var(--primary); border-color:var(--primary) }
 
-    /* Results */
     .results .kpi-grid{ display:grid; grid-template-columns:repeat(2,1fr); gap:.75rem }
     @media (min-width:720px){ .results .kpi-grid{ grid-template-columns:repeat(4,1fr) } }
     .kpi{ background:#fff; border:1px solid var(--border); border-radius:10px; padding:.75rem }
     .kpi .label{ color:var(--muted); font-size:.9rem }
     .kpi .value{ font-weight:800; font-size:1.1rem; margin-top:.35rem; color:var(--success) }
 
-    /* Content */
     .formula-box{ background:#EFF3F7; border:1px solid var(--border); border-radius:10px; padding:1rem; overflow:auto }
     code{ font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; background:#f6f8fa; padding:.2rem .35rem; border-radius:6px }
     .author-box{ color:var(--muted); border-top:1px solid var(--border); margin-top:1.25rem; padding-top:.75rem; font-size:.95rem }
 
-    /* Footer */
     footer{ margin-top:2rem; padding:1.5rem 0; background:#0f2840; color:#fff }
     footer a{ color:#fff }
-    .ad-placeholder:empty{ display:none }
+    .ad-placeholder{ display:none } /* hidden until pushed */
+    .ad-placeholder.show{ display:block }
   </style>
 
-  <!-- Ads (lazy) -->
   <script>
     function lazyLoadAds(){
       const io = new IntersectionObserver((es,o)=>{
         es.forEach(e=>{
           if(!e.isIntersecting) return;
           const ad=e.target; if(ad.dataset.loaded) return;
-          (adsbygoogle=window.adsbygoogle||[]).push({}); ad.dataset.loaded="1"; o.unobserve(ad);
+          (adsbygoogle=window.adsbygoogle||[]).push({}); ad.dataset.loaded="1"; ad.parentElement.classList.add("show"); o.unobserve(ad);
         });
       },{rootMargin:"100px"});
       window.addEventListener('DOMContentLoaded',()=>document.querySelectorAll('.adsbygoogle').forEach(el=>io.observe(el)));
@@ -101,7 +93,6 @@
     });
   </script>
 
-  <!-- JSON-LD (WebPage + Breadcrumbs) -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -121,7 +112,6 @@
   }
   </script>
 
-  <!-- Icons -->
   <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png"/>
   <link rel="icon" href="/favicon-16x16.png" sizes="16x16" type="image/png"/>
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180"/>
@@ -153,25 +143,20 @@
       </nav>
 
       <h1>Mortgage Refinance Calculator</h1>
-      <div class="ad-placeholder ad-slot-1">
-        <ins class="adsbygoogle ad-slot-1" data-ad-client="ca-pub-9476637732224939" data-ad-slot="auto" data-ad-format="auto" data-full-width-responsive="true" style="display:block"></ins>
-      </div>
+      <div class="ad-placeholder"><ins class="adsbygoogle" data-ad-client="ca-pub-9476637732224939" data-ad-slot="auto" data-ad-format="auto" data-full-width-responsive="true" style="display:block"></ins></div>
       <p>Quickly evaluate whether refinancing could save you money. Enter your current loan and proposed new terms to estimate the new payment, monthly savings, <strong>break-even time</strong>, and lifetime interest savings.</p>
 
       <div class="layout" aria-live="polite">
-        <!-- Calculator -->
         <aside class="card" aria-labelledby="calc-heading">
           <section id="calc" aria-describedby="assumptions">
             <h2 id="calc-heading" style="margin-top:0">Calculator</h2>
 
-            <!-- Current loan -->
             <div class="form-group">
               <label for="currentBalance">Current remaining balance *</label>
               <div class="input-wrap">
                 <input id="currentBalance" class="form-control" type="number" inputmode="decimal" step="0.01" min="0" placeholder="e.g. 280000" aria-required="true"/>
                 <span class="input-suffix">$</span>
               </div>
-              <div class="hint" id="currentBalanceHint">Estimated principal still owed on your existing mortgage.</div>
             </div>
 
             <div class="form-group">
@@ -187,7 +172,6 @@
               <input id="monthsRemaining" class="form-control" type="number" inputmode="numeric" step="1" min="1" placeholder="e.g. 300" aria-required="true"/>
             </div>
 
-            <!-- New loan -->
             <hr aria-hidden="true" style="border:none;border-top:1px solid var(--border);margin:1rem 0"/>
             <h3>New loan (refinance)</h3>
 
@@ -219,7 +203,6 @@
           </section>
         </aside>
 
-        <!-- Results -->
         <section class="card results" aria-labelledby="results-heading">
           <h2 id="results-heading">Results</h2>
           <div class="kpi-grid">
@@ -236,9 +219,8 @@
         </section>
       </div>
 
-      <!-- SEO/EEAT content -->
       <article class="card" style="margin-top:1rem">
-        <h2>Methodology & formulas</h2>
+        <h2>Methodology &amp; formulas</h2>
         <div class="formula-box">
           <div><code>PI = r × L / (1 − (1 + r)^(−n))</code> with <code>r = APR/12</code>, <code>n = months</code></div>
           <div><code>MonthlySavings = PI_current − PI_new</code></div>
@@ -250,10 +232,7 @@
         <details><summary>Is refinancing worth it if the rate drop is small?</summary><p>Compare the monthly savings to your total closing costs. The shorter the break-even time, the more attractive the refi.</p></details>
         <details><summary>Should I reset to 30 years?</summary><p>Lower payments come from longer terms; consider a 20- or 15-year refi to reduce total interest if the payment fits your budget.</p></details>
 
-        <!-- Full original guide (expanded) — preserved from your previous page -->
-        <section id="original-content">
-          <!-- Your original post-calculator content is retained and lightly structured for headings for better EEAT. -->
-        </section>
+        <section id="original-content"></section>
 
         <div class="author-box">
           <p><strong>Author:</strong> Ugo Candido. <strong>Reviewed by:</strong> Finance SME Team.
@@ -261,7 +240,6 @@
         </div>
       </article>
 
-      <!-- Sidebar / topic cluster -->
       <aside class="card" aria-label="Related calculators" style="margin-top:1rem">
         <h2 style="margin-top:0">Related calculators</h2>
         <ul>
@@ -281,7 +259,6 @@
   </footer>
 
   <script>
-    // minimal, transparent logic
     (function(){
       const $=id=>document.getElementById(id);
       const currBal=$('currentBalance'), currRate=$('currentRate'), monthsRem=$('monthsRemaining');
@@ -299,7 +276,7 @@
         const NR=+newRate.value||0, Nyrs=+newTermYears.value||30, C=+costs.value||0;
 
         const piCurr = PI(CB, CR, Nrem);
-        const Lnew = CB + C;                          // costs financed for transparency
+        const Lnew = CB + C;
         const nNew = Nyrs*12;
         const piNew = PI(Lnew, NR, nNew);
 
@@ -313,9 +290,7 @@
         costsOut.textContent = '$'+C.toFixed(2);
         breakeven.textContent = (beMonths===Infinity? '—' : beMonths.toFixed(1)+' mo');
 
-        // simple interest differential (illustrative)
         const totalIntNew = piNew*nNew - Lnew;
-        // A rough remaining-interest estimator (current):
         const totalIntCurrRem = piCurr*Nrem - CB;
         const diff = Math.max(totalIntCurrRem - totalIntNew, 0);
         interestSave.textContent = '$'+diff.toFixed(2);
