--- a/rent-vs-buy.html
+++ b/rent-vs-buy.html
@@ -69,19 +69,17 @@
     .author-box{ color:var(--muted); border-top:1px solid var(--border); margin-top:1.25rem; padding-top:.75rem; font-size:.95rem }
     footer{ margin-top:2rem; padding:1.5rem 0; background:#0f2840; color:#fff }
     footer a{ color:#fff }
-    .ad-placeholder:empty{ display:none }
+    .ad-placeholder{ display:none } .ad-placeholder.show{ display:block }
   </style>
 
-  <!-- ads (lazy) -->
   <script>
     function lazyLoadAds(){
-      const io=new IntersectionObserver((es,o)=>{es.forEach(e=>{if(!e.isIntersecting)return;const a=e.target;if(a.dataset.loaded)return;(adsbygoogle=window.adsbygoogle||[]).push({});a.dataset.loaded="1";o.unobserve(a);});},{rootMargin:"100px"});
+      const io=new IntersectionObserver((es,o)=>{es.forEach(e=>{if(!e.isIntersecting)return;const a=e.target;if(a.dataset.loaded)return;(adsbygoogle=window.adsbygoogle||[]).push({});a.dataset.loaded="1";a.parentElement.classList.add("show");o.unobserve(a);});},{rootMargin:"100px"});
       window.addEventListener('DOMContentLoaded',()=>document.querySelectorAll('.adsbygoogle').forEach(el=>io.observe(el)));
     }
     window.addEventListener("load",function(){const s=document.createElement("script");s.src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js";s.async=true;s.setAttribute("data-ad-client","ca-pub-9476637732224939");s.onload=lazyLoadAds;document.head.appendChild(s);});
   </script>
 
-  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -129,11 +127,10 @@
       </nav>
 
       <h1>Rent vs. Buy Calculator</h1>
-      <div class="ad-placeholder ad-slot-1"><ins class="adsbygoogle ad-slot-1" data-ad-client="ca-pub-9476637732224939" data-ad-slot="auto" data-ad-format="auto" data-full-width-responsive="true" style="display:block"></ins></div>
+      <div class="ad-placeholder"><ins class="adsbygoogle" data-ad-client="ca-pub-9476637732224939" data-ad-slot="auto" data-ad-format="auto" data-full-width-responsive="true" style="display:block"></ins></div>
       <p>Compare the true cost of renting versus owning over your selected time horizon. We account for mortgage amortization, property taxes, insurance, maintenance, appreciation, rent inflation, and transaction costs so you can make a confident, data-backed decision.</p>
 
       <div class="calculator-layout" role="region" aria-label="Rent vs. Buy interactive calculator">
-        <!-- Left: inputs (shortened to the essentials; retains your structure) -->
         <section class="card" aria-labelledby="calc-heading">
           <h2 id="calc-heading">Calculator</h2>
 
@@ -208,15 +205,12 @@
             </div>
           </div>
 
-          <!-- You can re-add the rest of your fields here (closing costs, appreciation, rent inputs, etc.) -->
-
           <div class="form-group" style="display:flex; gap:.5rem; flex-wrap:wrap">
             <button class="btn btn-secondary" type="button" id="resetBtn">Reset</button>
             <button class="btn btn-primary" type="button" id="calcBtn">Calculate</button>
           </div>
         </section>
 
-        <!-- Right: results -->
         <section class="card" aria-labelledby="results-heading">
           <h2 id="results-heading">Results</h2>
 
@@ -235,7 +229,6 @@
         </section>
       </div>
 
-      <!-- Content -->
       <article class="card" style="margin-top:1rem">
         <h2>Methodology (present value comparison)</h2>
         <div class="formula-box">
@@ -248,7 +241,6 @@
         <details><summary>What costs are included for owners?</summary><p>Mortgage P&amp;I, taxes, insurance, maintenance, HOA, purchase closing costs, selling costs, and net sale proceeds.</p></details>
         <details><summary>Why use present value?</summary><p>PV accounts for timing of cash flows, allowing fair comparison of monthly expenses and future proceeds.</p></details>
 
-        <!-- Full original guide (expanded) — preserved -->
         <section id="original-content"></section>
 
         <div class="author-box">
@@ -257,7 +249,6 @@
         </div>
       </article>
 
-      <!-- Related cluster -->
       <aside class="card" aria-label="Related calculators" style="margin-top:1rem">
         <h2 style="margin-top:0">Related calculators</h2>
         <ul>
@@ -281,7 +272,6 @@
       const $=id=>document.getElementById(id);
       const dpUnit=$('downUnit');
 
-      // very light illustrative logic; keep/extend with your full model
       function calc(){
         const price=+$('homePrice').value||0;
         const dpMode=document.querySelector('input[name="dpMode"]:checked').value;
@@ -294,7 +284,6 @@
         $('pvBuy').textContent = '$'+(PI*12*7).toFixed(0);
         $('pvRent').textContent = '$'+(12*7*(+$('tax').value/12 + +$('ins').value/12 + +$('maint').value/12)).toFixed(0);
 
-        // bars (toy)
         const b = Math.max(1, +$('pvBuy').textContent.replace(/[^\d.]/g,''));
         const r = Math.max(1, +$('pvRent').textContent.replace(/[^\d.]/g,''));
         $('barBuy').style.width = (100*b/(b+r)).toFixed(1)+'%';
