--- a/va-loan.html
+++ b/va-loan.html
@@ -63,19 +63,17 @@
     .author-box{ color:var(--muted); border-top:1px solid var(--border); margin-top:1.25rem; padding-top:.75rem; font-size:.95rem }
     footer{ margin-top:2rem; padding:1.5rem 0; background:#0f2840; color:#fff }
     footer a{ color:#fff }
-    .ad-placeholder:empty{ display:none }
+    .ad-placeholder{ display:none } .ad-placeholder.show{ display:block }
   </style>
 
-  <!-- Ads (lazy) -->
   <script>
     function lazyLoadAds(){
-      const io=new IntersectionObserver((es,o)=>{es.forEach(e=>{if(!e.isIntersecting)return;const a=e.target;if(a.dataset.loaded)return;(adsbygoogle=window.adsbygoogle||[]).push({});a.dataset.loaded="1";o.unobserve(a);});},{rootMargin:"100px"});
+      const io=new IntersectionObserver((es,o)=>{es.forEach(e=>{if(!e.isIntersecting)return;const a=e.target;if(a.dataset.loaded)return;(adsbygoogle=window.adsbygoogle||[]).push({});a.dataset.loaded="1";a.parentElement.classList.add("show");o.unobserve(a);});},{rootMargin:"100px"});
       window.addEventListener('DOMContentLoaded',()=>document.querySelectorAll('.adsbygoogle').forEach(el=>io.observe(el)));
     }
     window.addEventListener("load",function(){const s=document.createElement("script");s.src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js";s.async=true;s.setAttribute("data-ad-client","ca-pub-9476637732224939");s.onload=lazyLoadAds;document.head.appendChild(s);});
   </script>
 
-  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -123,11 +121,10 @@
       </nav>
 
       <h1>VA Loan Calculator</h1>
-      <div class="ad-placeholder ad-slot-1"><ins class="adsbygoogle ad-slot-1" data-ad-client="ca-pub-9476637732224939" data-ad-slot="auto" data-ad-format="auto" data-full-width-responsive="true" style="display:block"></ins></div>
+      <div class="ad-placeholder"><ins class="adsbygoogle" data-ad-client="ca-pub-9476637732224939" data-ad-slot="auto" data-ad-format="auto" data-full-width-responsive="true" style="display:block"></ins></div>
       <p>This professional VA loan calculator estimates the <strong>VA funding fee</strong>, principal &amp; interest, escrows (taxes, insurance, HOA), and total monthly payment. Use it for Purchase/Build, Cash-Out, or IRRRL scenarios.</p>
 
       <div class="calculator-layout" aria-live="polite">
-        <!-- Inputs -->
         <section class="card" aria-labelledby="calc-heading">
           <h2 id="calc-heading">Enter your loan details</h2>
 
@@ -199,7 +196,6 @@
           </div>
         </section>
 
-        <!-- Results -->
         <section class="card" aria-labelledby="results-heading">
           <h2 id="results-heading">Results</h2>
           <div class="kpi-grid">
@@ -216,7 +212,7 @@
       </div>
 
       <article class="card" style="margin-top:1rem">
-        <h2>Methodology & funding-fee formula</h2>
+        <h2>Methodology &amp; funding-fee formula</h2>
         <div class="formula-box">
           <div><code>BaseLoan = Price − DownPayment</code></div>
           <div><code>FundingFee = BaseLoan × rate(purpose, first/subsequent use, down tier)</code></div>
@@ -229,7 +225,6 @@
         <details><summary>Who is exempt from the VA funding fee?</summary><p>Veterans with service-connected disability compensation, some active-duty recipients with Purple Heart, and eligible surviving spouses; lenders verify with VA.</p></details>
         <details><summary>Does financing the fee change P&amp;I?</summary><p>Yes—financing increases the total loan amount, raising P&amp;I. Paying the fee upfront keeps P&amp;I lower.</p></details>
 
-        <!-- Full original guide (expanded) — preserved -->
         <section id="original-content"></section>
 
         <div class="author-box">
@@ -261,13 +256,11 @@
       const baseLoan=$('baseLoan'), fundingFee=$('fundingFee'), totalLoan=$('totalLoan'), piMonthly=$('piMonthly'), escrowsMonthly=$('escrowsMonthly'), totalMonthly=$('totalMonthly');
 
       function ffRate(purpose, firstUse=true, down=0){
-        // illustrative ranges; confirm against current VA tables when publishing
-        if(purpose==='irrrl') return 0.005;               // 0.5%
-        if(purpose==='cashout') return firstUse?0.023:0.036; // 2.3% / 3.6%
-        // purchase/build tiers
+        if(purpose==='irrrl') return 0.005;
+        if(purpose==='cashout') return firstUse?0.023:0.036;
         if(down>=10) return firstUse?0.0125:0.0125;
         if(down>=5)  return firstUse?0.015:0.015;
-        return firstUse?0.0215:0.036; // <5%
+        return firstUse?0.0215:0.036;
       }
 
       function PI(L, apr, n){ const r=(apr/100)/12; return r>0 ? r*L/(1-Math.pow(1+r,-n)) : L/n; }
@@ -281,7 +274,7 @@
 
         const rateFF = ffRate(purpose.value, true, ((+downPct.value)||0));
         const fee = base*rateFF;
-        const L = base + fee; // finance fee
+        const L = base + fee;
         const PIv = PI(L, apr, n);
 
         const esc = ( (+tax.value||0)/12 ) + ( (+ins.value||0)/12 ) + ( +hoa.value||0 );
