--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -5,11 +5,11 @@
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <meta content="Accurately calculate your Body Mass Index (BMI) using metric or US units. Get your BMI category, BMI Prime, and healthy weight range—fast, accessible, and mobile-first." name="description"/>
 <meta content="Ugo Candido" name="author"/>
-<link href="https://calcdomain.com/bmi.html" rel="canonical"/>
+<link href="https://calcdomain.com/bmi-calculator.html" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="BMI Calculator | Body Metrics for Adults (Metric &amp; US Units)" property="og:title"/>
 <meta content="Accurately calculate your BMI and get instant interpretation, BMI Prime, and healthy weight range. WCAG-compliant, mobile-first." property="og:description"/>
-<meta content="https://calcdomain.com/bmi-calculator" property="og:url"/>
+<meta content="https://calcdomain.com/bmi-calculator.html" property="og:url"/>
 <meta content="website" property="og:type"/>
 <meta content="summary" name="twitter:card"/>
 <meta content="#005A9C" name="theme-color"/>
@@ -278,7 +278,7 @@
   "@type": "WebPage",
   "name": "BMI Calculator",
   "description": "Accurately calculate your Body Mass Index (BMI) using metric or US units. Get your BMI category, BMI Prime, and healthy weight range.",
-  "url": "https://calcdomain.com/bmi.html",
+  "url": "https://calcdomain.com/bmi-calculator.html",
   "inLanguage": "en",
   "author": {
     "@type": "Person",
@@ -301,19 +301,19 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Health and Fitness",
-        "item": "https://calcdomain.com/health-and-fitness"
+        "item": "https://calcdomain.com/health-and-fitness.html"
       },
       {
         "@type": "ListItem",
         "position": 3,
         "name": "Body Metrics",
-        "item": "https://calcdomain.com/health-and-fitness/body-metrics"
+        "item": "https://calcdomain.com/health-and-fitness/body-metrics.html"
       },
       {
         "@type": "ListItem",
         "position": 4,
         "name": "BMI Calculator",
-        "item": "https://calcdomain.com/bmi-calculator"
+        "item": "https://calcdomain.com/bmi-calculator.html"
       }
     ]
   },
