--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <!-- Categories Section -->
     <section id="categories" class="py-16 bg-gray-50">
         <div class="container mx-auto px-4">
-            <div class="text-center mb-12">
+            <div class="text-center mb-12 mt-5">
                 <h2 class="text-3xl font-bold text-gray-900 mb-4">Calculator Categories</h2>
                 <p class="text-lg text-gray-600">Explore our comprehensive collection organized by topic</p>
             </div>
