--- a/mortgage-affordability-methodology-guide.html
+++ b/mortgage-affordability-methodology-guide.html
@@ -44,7 +44,7 @@
       <div class="flex items-center justify-between">
         <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
         <div class="hidden md:flex items-center space-x-6">
-          <a href="mortgage-affordability.html" class="text-blue-600 font-medium">← Back to Calculator</a>
+          <a href="mortgage-affordability-calculator.html" class="text-blue-600 font-medium">← Back to Calculator</a>
           <button onclick="window.print()" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Print Guide</button>
         </div>
       </div>
@@ -731,7 +731,7 @@
     <section class="card bg-blue-50 border-blue-200">
       <h2 class="text-3xl font-bold mb-4">Ready to Calculate Your Affordability?</h2>
       <p class="text-lg text-gray-700 mb-4">Use our comprehensive calculator to determine exactly how much house you can afford based on your unique financial situation.</p>
-      <a href="mortgage-affordability.html" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-blue-700 transition">Go to Calculator →</a>
+      <a href="mortgage-affordability-calculator.html" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-blue-700 transition">Go to Calculator →</a>
     </section>
 
     <section class="card">
