--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -33,6 +33,8 @@
     .table th, .table td { @apply border border-slate-200 text-right p-2; }
     .table th:first-child, .table td:first-child { @apply text-left; }
     .sticky-ad { height: 600px; }
+      .formula-box mjx-container { overflow-x: auto; }
+
   </style>
 
   <!-- Site search (placeholder hook from template) -->
@@ -310,53 +312,53 @@
           <h2>Data Source and Methodology</h2>
           <p>Calculations follow standard time-value-of-money identities for compounding and annuities. Results are computed in real time from your inputs. For public guidance on compounding concepts, see the SEC’s Investor.gov calculator and educational materials (external reference). The implementation here is independent and transparent.</p>
 
-          <h2>Formulas Used</h2>
-          <div class="formula-box">
-<pre>
-Given:
-- P = initial deposit (principal)
-- r = annual nominal rate (APR, decimal)
-- n = compounding periods per year
-- t = years
-- m = contribution frequency per year
-- PMT = contribution per period
-- δ = 1 if contributions at the beginning (annuity due), else 0 (end)
+<h2>Formulas Used</h2>
+<div class="formula-box prose max-w-none">
+  <p><strong>Given</strong></p>
+  <ul>
+    <li><em>P</em> = initial deposit (principal)</li>
+    <li><em>r</em> = annual nominal rate (APR, decimal)</li>
+    <li><em>n</em> = compounding periods per year</li>
+    <li><em>t</em> = years</li>
+    <li><em>m</em> = contribution frequency per year</li>
+    <li><em>PMT</em> = contribution per period</li>
+    <li><em>δ</em> = 1 if contributions at the beginning (annuity due), else 0 (end)</li>
+  </ul>
 
-Future value of principal:
-$$
-FV_{\text{principal}} = P \cdot \left(1 + \frac{r}{n}\right)^{n t}
-$$
+  <p><strong>Future value of principal</strong></p>
+  <div>\[
+  FV_{\text{principal}} = P \cdot \left(1 + \frac{r}{n}\right)^{n t}
+  \]</div>
 
-Per-contribution rate (when m may differ from n):
-$$
-i = \left(1 + \frac{r}{n}\right)^{\frac{n}{m}} - 1
-$$
+  <p><strong>Per-contribution rate (when m may differ from n)</strong></p>
+  <div>\[
+  i = \left(1 + \frac{r}{n}\right)^{\frac{n}{m}} - 1
+  \]</div>
 
-Future value of contributions:
-$$
-FV_{\text{contrib}} =
-\begin{cases}
-PMT \cdot \dfrac{(1 + i)^{m t} - 1}{i} \cdot (1 + i)^{\delta}, & \text{if } i \neq 0 \\
-PMT \cdot (m t), & \text{if } i = 0
-\end{cases}
-$$
+  <p><strong>Future value of contributions</strong></p>
+  <div>\[
+  FV_{\text{contrib}} =
+  \begin{cases}
+  PMT \cdot \dfrac{(1 + i)^{m t} - 1}{i} \cdot (1 + i)^{\delta}, & \text{if } i \neq 0 \\
+  PMT \cdot (m t), & \text{if } i = 0
+  \end{cases}
+  \]</div>
 
-Total future value (nominal):
-$$
-FV_{\text{total}} = FV_{\text{principal}} + FV_{\text{contrib}}
-$$
+  <p><strong>Total future value (nominal)</strong></p>
+  <div>\[
+  FV_{\text{total}} = FV_{\text{principal}} + FV_{\text{contrib}}
+  \]</div>
 
-Effective Annual Rate (EAR):
-$$
-EAR = \left(1 + \frac{r}{n}\right)^{n} - 1
-$$
+  <p><strong>Effective Annual Rate (EAR)</strong></p>
+  <div>\[
+  EAR = \left(1 + \frac{r}{n}\right)^{n} - 1
+  \]</div>
 
-Inflation-adjusted (real) future value (π = inflation):
-$$
-FV_{\text{real}} = \frac{FV_{\text{total}}}{(1 + \pi)^{t}}
-$$
-</pre>
-          </div>
+  <p><strong>Inflation-adjusted (real) future value (\(\pi\) = inflation)</strong></p>
+  <div>\[
+  FV_{\text{real}} = \frac{FV_{\text{total}}}{(1 + \pi)^{t}}
+  \]</div>
+</div>
 
           <h2>How to Use the Calculator</h2>
           <ol>
