--- a/roi.html
+++ b/roi.html
@@ -382,9 +382,9 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
             <ul class="space-y-3">
-              <li><a class="text-blue-600 hover:underline" href="compound-interest.html">Compound Interest Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP / DCA Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="irr-calculator.html">IRR (Internal Rate of Return)</a></li>
+              <li><a class="text-blue-600 hover:underline" href="irr.html">IRR (Internal Rate of Return)</a></li>
               <li><a class="text-blue-600 hover:underline" href="npv-calculator.html">NPV Calculator</a></li>
             </ul>
           </div>
