--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -440,8 +440,8 @@
             <ul class="space-y-3">
               <li><a class="text-blue-600 hover:underline" href="simple-interest.html">Simple Interest Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="investment-returns.html">Investment Return Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP / DCA Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="inflation-calculator.html">Inflation Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="sip.html">SIP / DCA Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="inflation.html">Inflation Calculator</a></li>
             </ul>
           </div>
         </div>
