--- a/irr.html
+++ b/irr.html
@@ -357,9 +357,9 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
             <ul class="space-y-3">
-              <li><a class="text-blue-600 hover:underline" href="npv-calculator.html">NPV Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="npv.html">NPV Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="roi.html">ROI Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="mirr-calculator.html">MIRR Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="mirr.html">MIRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="payback-period.html">Payback Period</a></li>
             </ul>
           </div>
