--- a/roi.html
+++ b/roi.html
@@ -385,7 +385,7 @@
               <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP / DCA Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR (Internal Rate of Return)</a></li>
-              <li><a class="text-blue-600 hover:underline" href="npv-calculator.html">NPV Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="npv.html">NPV Calculator</a></li>
             </ul>
           </div>
         </div>
