--- a/inflation.html
+++ b/inflation.html
@@ -318,7 +318,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Finance Tools</h3>
             <ul class="space-y-3">
-              <li><a class="text-blue-600 hover:underline" href="compound-interest.html">Compound Interest</a></li>
+              <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest</a></li>
               <li><a class="text-blue-600 hover:underline" href="roi.html">ROI Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="npv.html">NPV Calculator</a></li>
