--- a/sip-calculator.html
+++ b/sip-calculator.html
@@ -413,7 +413,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
             <ul class="space-y-3">
-              <li><a class="text-blue-600 hover:underline" href="compound-interest.html">Compound Interest</a></li>
+              <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest</a></li>
               <li><a class="text-blue-600 hover:underline" href="lumpsum-calculator.html">Lump Sum FV</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="goal-sip.html">Goal SIP Planner</a></li>
