--- a/lumpsum-calculator.html
+++ b/lumpsum-calculator.html
@@ -158,7 +158,7 @@
 
         <section class="bg-white p-6 rounded-lg shadow-md">
           <h1 class="text-3xl font-bold mb-2">Lumpsum Investment Plan Calculator Online</h1>
-          <p class="text-gray-600 mb-4">Project the corpus from a <strong>one-time (lumpsum)</strong> investment with support for <strong>compounding frequency</strong>, <strong>inflation-adjusted</strong> purchasing power, and <strong>goal-seek</strong> to find the required CAGR for a target amount. Built for planners and serious DIY investors. (Also optimized for the SEO keyphrase <em>lumpsum calculator</em>.)</p>
+          <p class="text-gray-600 mb-4">Project the corpus from a <strong>one-time (lumpsum)</strong> investment with support for <strong>compounding frequency</strong>, <strong>inflation-adjusted</strong> purchasing power, and <strong>goal-seek</strong> to find the required CAGR for a target amount. Built for planners and serious DIY investors.</p>
 
           <div class="eeat mb-6 text-sm text-gray-700">
             <span><strong>Author:</strong> Ugo Candido</span>
@@ -354,9 +354,8 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
             <ul class="space-y-3">
-              <li><a class="text-blue-600 hover:underline" href="compound-interest.html">Compound Interest</a></li>
+              <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest</a></li>
               <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="goal-planner.html">Goal Planner</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
             </ul>
           </div>
