--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -404,12 +404,12 @@
                     <h2>Common Percentage Conversions</h2>
                     <p>Here are some frequently used percentage-to-decimal conversions:</p>
                     <ul>
-                        <li>10% = 0.10</li>
-                        <li>25% = 0.25 (one quarter)</li>
-                        <li>33.33% = 0.3333 (one third)</li>
-                        <li>50% = 0.50 (one half)</li>
-                        <li>75% = 0.75 (three quarters)</li>
-                        <li>100% = 1.00 (the whole)</li>
+                        <li>10% = 0.10</li>25% = 0.25 
+                        <li>25% = 0.25 (one_quarter)</li>
+                        <li>33.33% = 0.3333 (one_third)</li>
+                        <li>50% = 0.50 (one_half)</li>
+                        <li>75% = 0.75 (three_quarters)</li>
+                        <li>100% = 1.00 (the_whole)</li>
                     </ul>
 
                     <h2>Tips for Working with Percentages</h2>
