--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -405,11 +405,11 @@
                     <p>Here are some frequently used percentage-to-decimal conversions:</p>
                     <ul>
                         <li>10% = 0.10</li>25% = 0.25 
-                        <li>25% = 0.25 (one_quarter)</li>
-                        <li>33.33% = 0.3333 (one_third)</li>
-                        <li>50% = 0.50 (one_half)</li>
-                        <li>75% = 0.75 (three_quarters)</li>
-                        <li>100% = 1.00 (the_whole)</li>
+                        <li>25% = 0.25 or one quarter</li>
+                        <li>33.33% = 0.3333 or one third</li>
+                        <li>50% = 0.50 or one half </li>
+                        <li>75% = 0.75 or three quarters</li>
+                        <li>100% = 1.00 or the whole</li>
                     </ul>
 
                     <h2>Tips for Working with Percentages</h2>
