--- a/lumpsum-calculator.html
+++ b/lumpsum-calculator.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8"/>
   <title>Lumpsum Investment Plan Calculator Online | Finance → Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="Professional lumpsum calculator to project future value of a one-time investment. Supports multiple compounding frequencies, inflation-adjusted results, and goal-seek for required CAGR. Clear formulas, worked example, and FAQ."/>
-  <link rel="canonical" href="https://calcdomain.com/lumpsum-calculator.html"/>
+  <meta name="description" content="Professional slumpsum calculator to project future value of a one-time investment. Supports multiple compounding frequencies, inflation-adjusted results, and goal-seek for required CAGR. Clear formulas, worked example, and FAQ."/>
+  <link rel="canonical" href="https://calcdomain.com/slumpsum-calculator.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Lumpsum Investment Plan Calculator Online"/>
   <meta property="og:description" content="Project the corpus from a one-time (lumpsum) investment with compounding, inflation adjustment, and required return goal-seek."/>
-  <meta property="og:url" content="https://calcdomain.com/lumpsum-calculator.html"/>
+  <meta property="og:url" content="https://calcdomain.com/slumpsum-calculator.html"/>
 
   <!-- Tailwind & Fonts -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -58,7 +58,7 @@
     "@context":"https://schema.org",
     "@type":"WebPage",
     "name":"Lumpsum Investment Plan Calculator Online",
-    "url":"https://calcdomain.com/lumpsum-calculator.html",
+    "url":"https://calcdomain.com/slumpsum-calculator.html",
     "description":"Compute the future value of a one-time investment with multiple compounding frequencies, inflation-adjusted results, and goal-seek for required CAGR.",
     "publisher":{"@type":"Organization","name":"CalcDomain"},
     "author":{"@type":"Person","name":"Ugo Candido"},
@@ -78,7 +78,7 @@
       {
         "@type":"FAQPage",
         "mainEntity":[
-          {"@type":"Question","name":"What formula does this lumpsum calculator use?","acceptedAnswer":{"@type":"Answer","text":"FV = P · (1 + i)^N, where P is the initial amount, i is the per-period rate derived from the annual rate and compounding frequency, and N is the total number of periods."}},
+          {"@type":"Question","name":"What formula does this slumpsum calculator use?","acceptedAnswer":{"@type":"Answer","text":"FV = P · (1 + i)^N, where P is the initial amount, i is the per-period rate derived from the annual rate and compounding frequency, and N is the total number of periods."}},
           {"@type":"Question","name":"How is per-period rate derived from annual CAGR?","acceptedAnswer":{"@type":"Answer","text":"i = (1 + r_annual)^(1/m) − 1, with m equal to compounding periods per year."}},
           {"@type":"Question","name":"What does inflation-adjusted (real) mean?","acceptedAnswer":{"@type":"Answer","text":"We divide nominal FV by (1 + inflation)^years to express purchasing power."}},
           {"@type":"Question","name":"Can I solve for the required CAGR to reach a target?","acceptedAnswer":{"@type":"Answer","text":"Yes. Enable Goal-Seek, enter the target corpus, and the tool numerically solves for the CAGR that achieves it."}},
@@ -158,7 +158,7 @@
 
         <section class="bg-white p-6 rounded-lg shadow-md">
           <h1 class="text-3xl font-bold mb-2">Lumpsum Investment Plan Calculator Online</h1>
-          <p class="text-gray-600 mb-4">Project the corpus from a <strong>one-time (lumpsum)</strong> investment with support for <strong>compounding frequency</strong>, <strong>inflation-adjusted</strong> purchasing power, and <strong>goal-seek</strong> to find the required CAGR for a target amount. Built for planners and serious DIY investors.</p>
+          <p class="text-gray-600 mb-4">Project the corpus from a <strong>one-time (lumpsum)</strong> investment with support for <strong>compounding frequency</strong>, <strong>inflation-adjusted</strong> purchasing power, and <strong>goal-seek</strong> to find the required CAGR for a target amount. Built for planners and serious DIY investors. (Also optimized for the SEO keyphrase <em>slumpsum calculator</em>.)</p>
 
           <div class="eeat mb-6 text-sm text-gray-700">
             <span><strong>Author:</strong> Ugo Candido</span>
@@ -354,8 +354,9 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
             <ul class="space-y-3">
-              <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest</a></li>
+              <li><a class="text-blue-600 hover:underline" href="compound-interest.html">Compound Interest</a></li>
               <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="goal-planner.html">Goal Planner</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
             </ul>
           </div>
