--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -469,7 +469,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Math Tools</h3>
                         <ul class="space-y-3">
-                            <li><a href="fraction-calculator.html" class="text-blue-600 hover:underline">Fraction Calculator</a></li>
+                            <li><a href="fraction.html" class="text-blue-600 hover:underline">Fraction Calculator</a></li>
                             <li><a href="decimal-to-fraction.html" class="text-blue-600 hover:underline">Decimal to Fraction Converter</a></li>
                             <li><a href="ratio-calculator.html" class="text-blue-600 hover:underline">Ratio Calculator</a></li>
                             <li><a href="discount-calculator.html" class="text-blue-600 hover:underline">Discount Calculator</a></li>
