--- a/npv.html
+++ b/npv.html
@@ -391,7 +391,7 @@
             <ul class="space-y-3">
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="roi.html">ROI Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="mirr-calculator.html">MIRR Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="mirr.html">MIRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="payback-period.html">Payback Period</a></li>
             </ul>
           </div>
