--- a/payback-period.html
+++ b/payback-period.html
@@ -321,7 +321,7 @@
             <ul class="space-y-3">
               <li><a class="text-blue-600 hover:underline" href="npv.html">NPV Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="mirr-calculator.html">MIRR Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="mirr.html">MIRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="roi.html">ROI Calculator</a></li>
             </ul>
           </div>
