--- a/mirr.html
+++ b/mirr.html
@@ -365,7 +365,7 @@
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="npv.html">NPV Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="slumpsum-calculator.html">Lumpsum Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="lumpsum-calculator.html">Lumpsum Calculator</a></li>
             </ul>
           </div>
         </div>
