--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -473,7 +473,7 @@
                             <li><a href="decimal-to-fraction.html" class="text-blue-600 hover:underline">Decimal to Fraction Converter</a></li>
                             <li><a href="ratio-calculator.html" class="text-blue-600 hover:underline">Ratio Calculator</a></li>
                             <li><a href="discount-calculator.html" class="text-blue-600 hover:underline">Discount Calculator</a></li>
-                            <li><a href="tip-calculator.html" class="text-blue-600 hover:underline">Tip Calculator</a></li>
+                            <li><a href="tip.html" class="text-blue-600 hover:underline">Tip Calculator</a></li>
                             <li><a href="grade-calculator.html" class="text-blue-600 hover:underline">Grade Calculator</a></li>
                         </ul>
                     </div>
