--- a/subcategories/lifestyle-everyday-miscellaneous.html
+++ b/subcategories/lifestyle-everyday-miscellaneous.html
@@ -348,7 +348,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-sm border">
                         <h2 class="text-xl font-semibold mb-4 text-gray-800">🧮 Everyday Calculators</h2>
                         <div class="space-y-3">
-                            <a href="../tip-calculator.html" class="block p-3 bg-gray-50 rounded-lg hover:bg-blue-50 transition-colors">
+                            <a href="../tip.html" class="block p-3 bg-gray-50 rounded-lg hover:bg-blue-50 transition-colors">
                                 <h3 class="font-medium text-gray-800">Tip Calculator</h3>
                                 <p class="text-sm text-gray-600">Calculate tips and split bills</p>
                             </a>
