--- a/aggregate-gradation.html
+++ b/aggregate-gradation.html
@@ -326,7 +326,7 @@
 <main class="main-content" id="main-content" role="main">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumbs">
-<a href="/">Home</a> / <a href="https://calcdomain.com/construction.html">Construction</a> / <a href="https://calcdomain.com/concrete-mix-design.html">Concrete Mix Design</a> / Aggregate Gradation Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/construction.html">Construction</a> / <a href="https://calcdomain.com/concrete-mix.html">Concrete Mix Design</a> / Aggregate Gradation Calculator
       </nav>
 <div class="calculator-layout">
 <aside aria-labelledby="page-title" class="card">
