--- a/concrete-admixture.html
+++ b/concrete-admixture.html
@@ -249,7 +249,7 @@
 </header>
 <main class="container" id="main" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/construction.html">Construction</a> / <a href="https://calcdomain.com/concrete-mix-design.html">Concrete Mix Design</a> / Concrete Admixture Dosage Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/construction.html">Construction</a> / <a href="https://calcdomain.com/concrete-mix.html">Concrete Mix Design</a> / Concrete Admixture Dosage Calculator
     </nav>
 <h1>Concrete Admixture Dosage Calculator</h1>
 <p>This professional-grade concrete admixture calculator helps contractors, ready-mix producers, site engineers, and QC technicians compute total admixture requirements. Calculate by percent of cement, per 100 kg/lb of cement, or per unit concrete volume, with full support for Metric and US units.</p>
