--- a/concrete-strength.html
+++ b/concrete-strength.html
@@ -274,7 +274,7 @@
 
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/construction.html">Construction</a> / <a href="https://calcdomain.com/concrete-mix-design.html">Concrete Mix Design</a> / Concrete Compressive Strength Estimator
+<a href="/">Home</a> / <a href="https://calcdomain.com/construction.html">Construction</a> / <a href="https://calcdomain.com/concrete-mix.html">Concrete Mix Design</a> / Concrete Compressive Strength Estimator
     </nav>
 <h1>Concrete Compressive Strength Estimator</h1>
 <p class="intro">This professional concrete strength calculator helps engineers, contractors, and QA/QC technicians estimate 28‑day compressive strength from the water–cement ratio (w/c), or invert the relationship to find the required w/c for a target strength. Outputs include f'c in psi and MPa and the ACI‑318 modulus of elasticity for design checks.</p>
